# boxy

./: LICENSE  NOTICE  README.md  main.py  pyproject.toml  workflow.txt
THIRD_PARTY_LICENSES/: pillow.MIT.txt
assets/wordle/: listemots.csv
examples/: file.py  full_example.py  jeudelavie.py  snake.py  sokoban.py  sokoban_maps.py  taquin.py  tictactoe.py  wordle.py
src/boxy/: CrafterFactory.py  __init__.py
src/boxy/backends/: __init__.py  abstract.py  arcade.py
src/easygrid/: __init__.py
src/easygrid/backends/: __init__.py  arcade_impl.py
src/metagrid/: CrafterFactory.py  __init__.py
src/metagrid/backends/: __init__.py  abstract.py  arcade_impl.py
